LIST OF CHANGES
---------------

release 2.2
 - DBIx schema update

release 2.1
 - small change to LibraryDigest to support non SS tracked libraries.
 - use custom build base class to get correct version in a distribution
 - Travis tweaks
   + add deployment to GitHub Releases
   + add newer 5.22 Perl to travis build matrix and allow container builds (sudo false)

release 2.0
 - update to test script and data for filters in LibraryDigest
 - added DBIx class for the new pacbio LIMs data table

release 1.8
 - parameterized WTSI::DNAP::Warehouse::Schema::Query::IseqFlowcell role
   to allow for query on run id
 - iseq_product_metrics table: add columns to store in-house qc values

release 1.7
 - extend field size for mean_bait_coverage RT#495558, Change request No6

release 1.6
 - change the comment on iseq_run_lane_metrics.unexpected_tags_percent
 - update DBIx schema to reflect this change and propagate any changes
   to other tables of the live database

release 1.5
 - Ability to query by id_study_lims in LibraryDigest
 - Added unexpected tag and chimeric fields to iseq_product_metric and iseq_run_lane_metric tables
 - Ability to restrict by (legacy) library id
 - Added extra fields to entity which are needed by library merging script for adding to iRODS meta data.
   Key changed to included cycle count as well as paired_flag. Corresponding test updated. 

release 1.4
 - update DBIx binding to include second index sequence
 - check that flowcell LIMs id and barcode map 1:1 (RT#481156)

release 1.3
 - mapping for additional lims interface fields for sample data

release 1.2
 - value of the GCLP data lims flag has changed - reflect this

release 1.1
 - bug fix in readonly variable declaration

release 1.0
 - DBIx schema update following database schema changes
 - contains_human_dna and contaminated_human_dna columns have been converted
   from varchar to tinyint, inflators/deflators for these columns dropped

release 0.7