@@ -1,5 +1,6 @@
 LIST OF CHANGES
 ---------------
+ - library_type added to LibraryDigest entity
 
 release 2.2
  - DBIx schema update
